# rules_go

./: CONTRIBUTING.md  MODULE.bazel  WORKSPACE  go.mod
.bazelci/: presubmit.yml
docs/go/core/: bzlmod.md
go/: def.bzl  nogo.rst
go/private/: BUILD.bazel  BUILD.sdk.bazel  common.bzl  context.bzl  extensions.bzl  go_toolchain.bzl  repositories.bzl  sdk.bzl
go/private/actions/: archive.bzl  compilepkg.bzl  stdlib.bzl
go/private/rules/: binary.bzl  cgo.bzl  library.bzl  test.bzl  transition.bzl
go/tools/bazel_testing/: bazel_testing.go
go/tools/builders/: cgo2.go  compilepkg.go  nogo.go  nogo_main.go
go/tools/bzltestutil/: lcov.go
go/tools/gopackagesdriver/: aspect.bzl
go/tools/gopackagesdriver/pkgjson/: main.go  pkg_json.bzl
proto/: compiler.bzl  def.bzl
tests/bcr/: BUILD.bazel  MODULE.bazel
tests/core/cgo/cgo_alwayslink_init/: BUILD.bazel  README.rst  lib.cpp  lib.h  side_effect.cpp  test_side_effect.cpp  test_side_effect.go
tests/core/coverage/: BUILD.bazel
tests/core/go_binary/: BUILD.bazel
tests/core/go_library/: BUILD.bazel
tests/core/go_plugin_with_proto_library/: BUILD.bazel
tests/core/go_proto_aspect/: BUILD.bazel
tests/core/go_proto_library/: BUILD.bazel
tests/core/go_proto_library_importmap/: BUILD.bazel
tests/core/go_proto_library_importpath/: BUILD.bazel
tests/core/nogo/custom/: custom_test.go
tests/core/transitive_headers/a/: BUILD.bazel
tests/integration/googleapis/: BUILD.bazel
tests/integration/grpc_plugin/: BUILD.bazel
tests/legacy/proto_ignore_go_package_option/: BUILD.bazel
(+7 files in other folders)
